# dori

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.superpowers/brainstorm/78637-1777704079/content/: colorscheme-hc.html  colorscheme-hc2.html  colorscheme.html  layout.html
.superpowers/brainstorm/78637-1777704079/state/: server-stopped
boilerplate/: AGENTS.md  CREATING_SKILLS.md
boilerplate/presets/reminders/: dbus.py  template.md  template.py
boilerplate/presets/search/: ddgs.py  tavily.py
boilerplate/scripts/: _commit_workflow.py  _web_common.py  analyze-folder.py  calendar.py  code.py  commit.py  docker.py  git.py  images.py  maps.py  news.py  reminders.py  web.py
boilerplate/skills/: analyze-folder.md  calendar.md  reminders.md  search.md
boilerplate/skills/devtools/: _index.md  commit.md  docker.md  git.md
boilerplate/skills/search/: _index.md  code.md  images.md  maps.md  news.md  web.md
docs/: how-it-works.md  how-to-create-boilerplate-skills.md
docs/superpowers/plans/: 2026-04-28-legacy-pipeline-port.md  2026-05-02-mnemo8-tui.md  2026-05-30-git-expert-skill.md
docs/superpowers/specs/: 2026-04-28-legacy-port-design.md  2026-05-02-mnemo8-tui-design.md  2026-05-30-git-expert-skill-design.md  2026-05-31-reminders-init-presets-design.md  2026-06-01-ollama-commit-message-design.md  2026-06-06-web-search-presets-design.md  2026-06-07-chat-script-interactions-design.md  2026-06-12-conservative-commit-grouping-design.md  2026-06-13-inline-workflow-interaction-design.md
dori/: __init__.py  chat.py  commands.py  loader.py  main.py  schemas.py  script.py  tui.py  tui.tcss  workflow.py
dori/boilerplate/: DORI.md
dori/boilerplate/presets/reminders/: dbus.md  dbus.py
dori/boilerplate/presets/search/: ddgs.md  tavily.py
dori/boilerplate/scripts/: analyze-folder.py  calendar.py  commit.py
dori/boilerplate/skills/: calendar.md
dori/boilerplate/skills/devtools/: _index.md  commit.md  docker.md  git.md
mnemo8/: __init__.py  chat.py  commands.py  commit_workflow.py  loader.py  main.py  models.py  schemas.py  tui.py  tui.tcss
scripts/: calendar.py  search.py
tests/: conftest.py  test_boilerplate.py  test_chat.py  test_cli_dispatch.py  test_commit_llm_eval.py  test_commit_script.py  test_commit_workflow.py  test_git_expert_script.py  test_init_presets.py  test_loader.py  test_ollama_integration.py  test_script_api.py  test_tui.py  test_web_common.py  test_web_ddgs.py  test_web_tavily.py  test_workflow.py
tests/fixtures/commit_corpus/: README.md  angular-compiler-rename-visitor.json  angular-core-injectasync-promise.json  angular-forms-docs-signal-call.json  angular-i18n-select-hasown.json  angular-sw-referrer-policy.json  angular-zonejs-proto-hardening.json  dori-pyproject-license-metadata.json  dori-remove-persona-migration.json  dori-script-partial-writes.json  dori-script-protocol-version-test.json  dori-tui-missing-widgets.json  dori-update-workspace-md5.json  generate.py
