[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dori"
version = "0.1.0"
description = "Dori terminal assistant powered by the mnemo8 engine"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "rich>=13.0.0",
    "ollama>=0.2.0",
    "textual>=0.52.0",
    "pydantic>=2.0.0",
]

[project.scripts]
dori = "mnemo8.main:run"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy", "pre-commit"]

[tool.setuptools]
packages = ["mnemo8"]

[tool.poetry]
packages = [{ include = "mnemo8" }]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "UP038"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pre-commit]
yaml_version = "2.0.0"

[tool.pytest.ini_options]
markers = [
    "integration: tests that call external/local services such as Ollama",
]
