[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dori"
version = "0.1.0"
description = "Dori terminal assistant"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mauricio" }]
keywords = ["cli", "local-first", "ollama", "terminal", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "ollama>=0.2.0",
    "textual>=0.52.0",
    "pydantic>=2.0.0",
    "ddgs (>=9.14.4,<10)",
]

[project.scripts]
dori = "dori.main:run"

[project.urls]
Homepage = "https://github.com/mtdb/dori"
Repository = "https://github.com/mtdb/dori"
Issues = "https://github.com/mtdb/dori/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy", "pre-commit"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["dori*"]
namespaces = true

[tool.setuptools.package-data]
dori = [
    "tui.tcss",
    "boilerplate/*.md",
    "boilerplate/assets/*",
    "boilerplate/presets/reminders/*",
    "boilerplate/presets/search/*",
    "boilerplate/scripts/*",
    "boilerplate/skills/*",
    "boilerplate/skills/devtools/*",
]

[tool.poetry]
packages = [{ include = "dori" }]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "UP038"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pre-commit]
yaml_version = "2.0.0"

[tool.pytest.ini_options]
markers = [
    "integration: tests that call external/local services such as Ollama",
]

[dependency-groups]
dev = [
    "build (>=1.5.0,<2.0.0)",
    "twine (>=6.2.0,<7.0.0)"
]
